--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "expo": "~39.0.2",
+    "expo-image-picker": "^9.1.1",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-alert-async": "^1.0.5",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2"
   },
   "devDependencies": {
     "@types/react": "~16.9.35",
