--- a/package.json
+++ b/package.json
@@ -6,7 +6,26 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
+      "\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.jest.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.4",
@@ -34,6 +53,7 @@
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.3.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-typescript": "^11.4.0",
     "eslint-plugin-import": "^2.22.0",
@@ -41,6 +61,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "react-native-web": "~0.13.7",
+    "ts-jest": "^26.4.4",
     "typescript": "~3.9.5"
   },
   "private": true
