--- a/package.json
+++ b/package.json
@@ -27,34 +27,36 @@
     ],
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
   },
- "dependencies": {
+  "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.10.2",
     "@react-navigation/native": "^5.8.2",
     "@react-navigation/stack": "^5.11.1",
+    "@types/react-redux": "^7.1.11",
+    "@types/redux-persist": "^4.3.1",
     "expo": "~39.0.2",
     "expo-constants": "^9.2.0",
+    "expo-image-picker": "^9.1.1",
+    "expo-permissions": "^9.3.0",
     "expo-status-bar": "~1.0.2",
     "moment": "^2.29.1",
+    "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-alert-async": "^1.0.5",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-picker-select": "^8.0.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "@react-navigation/drawer": "^5.10.2",
-    "@types/react-redux": "^7.1.11",
-    "@types/redux-persist": "^4.3.1",
-    "expo-image-picker": "^9.1.1",
-    "native-base": "^2.13.14",
-    "react-redux": "^7.2.2",
-    "react-native-alert-async": "^1.0.5",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-persist-expo-securestore": "^2.0.0"
