--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-alert-async": "^1.0.5",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal": "^11.5.6",
     "react-native-picker-select": "^8.0.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
