--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint --ext .jsx,.ts,.tsx ./",
+    "lint-fix": "eslint --ext .jsx,.ts,.tsx ./ --fix",
     "test": "jest"
   },
   "jest": {
@@ -27,7 +28,7 @@
     ],
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
   },
- "dependencies": {
+  "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.10.2",
