--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "jest": "^26.6.3",
     "react-native-web": "~0.13.7",
     "ts-jest": "^26.4.4",
     "typescript": "~3.9.5"
