--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^3.0.4",
+    "@react-native-community/datetimepicker": "^3.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.10.2",
     "@react-navigation/native": "^5.8.2",
     "@react-navigation/stack": "^5.11.1",
     "@types/react-redux": "^7.1.11",
     "@types/redux-persist": "^4.3.1",
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-constants": "^9.2.0",
     "expo-image-picker": "^9.1.1",
