--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "include": [
     "babel.config.js",
+    "assets/img.d.ts",
     ".eslintrc.js",
     "App.test.tsx",
     "App.tsx",
