--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/drawer": "^5.10.2",
     "@react-navigation/native": "^5.8.2",
     "@react-navigation/stack": "^5.11.1",
@@ -42,19 +43,28 @@
     "expo-image-picker": "^9.1.1",
     "expo-permissions": "^9.3.0",
     "expo-status-bar": "~1.0.2",
+    "immutability-helper": "^3.1.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "native-base": "^2.13.14",
     "react": "16.13.1",
+    "react-addons-update": "^15.6.2",
     "react-dom": "16.13.1",
+    "react-minimal-pie-chart": "^8.1.0",
+    "react-moment": "^1.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-alert-async": "^1.0.5",
-    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-chart-kit": "^6.7.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-modal": "^11.5.6",
-    "react-native-picker-select": "^8.0.2",
+    "react-native-percentage-circle": "^1.0.7",
+    "react-native-pie": "^1.1.2",
+    "react-native-pie-chart": "^1.0.13",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
@@ -62,9 +72,11 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-persist-expo-securestore": "^2.0.0"
+    "redux-persist-expo-securestore": "^2.0.0",
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
+    "@react-native-community/datetimepicker": "^3.0.6",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
@@ -78,6 +90,8 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.6.3",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-picker-select": "^8.0.3",
     "react-native-web": "~0.13.7",
     "ts-jest": "^26.4.4",
     "typescript": "~3.9.5"
