--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.6",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/drawer": "^5.10.2",
@@ -42,7 +43,7 @@
     "expo": "~39.0.2",
     "expo-constants": "^9.2.0",
     "expo-image-picker": "^9.1.1",
-    "expo-permissions": "^9.3.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "immutability-helper": "^3.1.1",
     "moment": "^2.29.1",
@@ -58,6 +59,7 @@
     "react-native-chart-kit": "^6.7.0",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-percentage-circle": "^1.0.7",
     "react-native-pie": "^1.1.2",
@@ -75,7 +77,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-persist-expo-securestore": "^2.0.0",
-    "victory-native": "^35.3.1"
+    "victory-native": "^35.3.1",
+    "expo-location": "~9.0.0"
   },
   "devDependencies": {
     "@types/react": "~16.9.35",
